# plw-django

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
config/: settings.py
tests/: test_.py
